Update from October 19, 2022

--- a/67514-h/67514-h.htm
+++ b/67514-h/67514-h.htm
@@ -83,7 +83,8 @@ country where you are located before using this eBook.
 <p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: The House of the Arrow</p>
 <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Author: A. E. W. Mason</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Release Date: February 26, 2022 [eBook #67514]<br />
-[Last Updated: March 13, 2022]</p>
+[Last Updated: March 13, 2022]<br>
+[Last updated: October 19, 2022]</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: English</p>
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Al Haines</p>
 <div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK THE HOUSE OF THE ARROW ***</div>
@@ -13570,7 +13571,7 @@ murder was committed in a way peculiar to one man."
 
 <p>
 "Certainly you shall have a copy of the report,
-Monsieur Hanaud," replied the young Commissary in a police
+Monsieur Hanaud," replied the young Commissary in a polite
 and formal voice.
 </p>
 
