Update from March 13, 2022

--- a/67514-h/67514-h.htm
+++ b/67514-h/67514-h.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
    "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
@@ -10,35 +10,25 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>
-The Project Gutenberg eBook of The House of the Arrow, 
+The Project Gutenberg eBook of The House of the Arrow,
 by A. E. W. Mason
 </title>
 
 <style type="text/css">
-body { color: black; 
-       background: white; 
-       margin-right: 10%; 
-       margin-left: 10%; 
-       font-family: "Times New Roman", serif; 
+body { color: black;
+       background: white;
+       margin-right: 10%;
+       margin-left: 10%;
+       font-family: "Times New Roman", serif;
        text-align: justify }
 
 p {text-indent: 4% }
 
 p.noindent {text-indent: 0% }
 
-p.t1 {text-indent: 0% ;
-      font-size: 200%;
-      text-align: center }
-
 p.t2 {text-indent: 0% ;
       font-size: 150%;
       text-align: center }
-
-p.t2b {text-indent: 0% ;
-      font-size: 150%;
-      font-weight: bold;
-      text-align: center }
-
 p.t3 {text-indent: 0% ;
       font-size: 100%;
       text-align: center }
@@ -52,64 +42,27 @@ p.t4 {text-indent: 0% ;
       font-size: 80%;
       text-align: center }
 
-p.t4b {text-indent: 0% ;
-      font-size: 80%;
-      font-weight: bold;
-      text-align: center }
-
-p.t5 {text-indent: 0% ;
-      font-size: 60%;
-      text-align: center }
-
 h1 { text-align: center }
 h2 { text-align: center }
 h3 { text-align: center }
 h4 { text-align: center }
 h5 { text-align: center }
 
-p.poem {text-indent: 0%; 
-        margin-left: 10%; }
-
-p.thought {text-indent: 0% ;
-           letter-spacing: 4em ;
-           text-align: center }
-
-p.letter {text-indent: 0%; 
-          margin-left: 10% ;
-          margin-right: 10% }
-
-p.footnote {text-indent: 0% ;
-            font-size: 80%;
-            margin-left: 10% ;
-            margin-right: 10% }
-
-.smcap { font-variant: small-caps }
-
-p.transnote {text-indent: 0% ;
-             margin-left: 10% ;
-             margin-right: 10% }
-
 p.quote {text-indent: 4% ;
          margin-left: 10% ;
          margin-right: 10% }
 
-p.finis { font-size: larger ;
-          text-align: center ;
-          text-indent: 0% ;
-          margin-left: 0% ;
-          margin-right: 0% }
-          
-td.tdleft { vertical-align: top; 
+td.tdleft { vertical-align: top;
             font-size: 85%;
-            padding: 2%; 
+            padding: 2%;
             padding-bottom: 0%
            }
-          
-td.tdright { vertical-align: top; 
+
+td.tdright { vertical-align: top;
              font-size: 85%;
              padding: 2%;
              padding-bottom: 0%
-           }          
+           }
 
 </style>
 
@@ -129,7 +82,8 @@ country where you are located before using this eBook.
 
 <p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: The House of the Arrow</p>
 <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Author: A. E. W. Mason</p>
-<p style='display:block; text-indent:0; margin:1em 0'>Release Date: February 26, 2022 [eBook #67514]</p>
+<p style='display:block; text-indent:0; margin:1em 0'>Release Date: February 26, 2022 [eBook #67514]<br />
+[Last Updated: March 13, 2022]</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: English</p>
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Al Haines</p>
 <div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK THE HOUSE OF THE ARROW ***</div>
@@ -4516,7 +4470,7 @@ she came back into the room.
 <p><a id="chap07"></a></p>
 
 <h3>
-CHAPTER SEVEN: <i>Exit Woberski</i>
+CHAPTER SEVEN: <i>Exit Waberski</i>
 </h3>
 
 <p>
@@ -5219,7 +5173,7 @@ judge of the Assizes when the verdict is given."
 </p>
 
 <p>
-Betty Harlowe leaned back once more indifferent
+Betty Harlowe leaned back once more indifferent.
 From an arm-chair near the door, a little gurgle of
 laughter broke from the lips of Ann Upcott.  Even Hanaud
 smiled.
@@ -9741,7 +9695,7 @@ are for it, Betty Harlowe.  Hanaud the detective from
 Paris is coming to look after you with his handcuffs
 in his pocket.  You'll look pretty in handcuffs, won't
 you, Betty?  It's your white neck we want!  Three
-cheers for Woberski?  The Scourge.</i>"
+cheers for Waberski?  The Scourge.</i>"
 </p>
 
 <p><br /></p>
@@ -10822,7 +10776,7 @@ problem reduced at last to these terms:
 <table style="width: 100%">
 <tr>
 <th style="width: 50%; text-align: center">
-For 
+For
 </th>
 <th style="width: 50%; text-align: center">
 Against
@@ -10831,18 +10785,18 @@ Against
 
 <tr>
 <td class="tdleft">
-(1) Although suspicion that        
-murder had been committed          
-arose in the first instance only   
-from the return to its shelf of    
-the "Treatise on Sporanthus        
+(1) Although suspicion that
+murder had been committed
+arose in the first instance only
+from the return to its shelf of
+the "Treatise on Sporanthus
 Hispidus," subsequent developments,
-e.g., the disappearance of         
+e.g., the disappearance of
 the Poison Arrow, the introduction
-into the case of the ill-famed                                        
-Jean Cladel, Ann Upcott's story    
-of her visit to the Treasure 
-Room, and now the mystery of 
+into the case of the ill-famed
+Jean Cladel, Ann Upcott's story
+of her visit to the Treasure
+Room, and now the mystery of
 Mrs. Harlowe's pearl necklace,
 make out a prima facie case for
 inquiry.
@@ -10866,8 +10820,8 @@ poisoner always a poisoner.
 
 <tr>
 <td class="tdleft">
-(2) If murder was committed, 
-it is probable that it was 
+(2) If murder was committed,
+it is probable that it was
 committed at half-past ten at night
 when Ann Upcott in the Treasure
 Room heard the sound of a
@@ -10892,9 +10846,9 @@ from her.
 
 <tr>
 <td class="tdleft">
-(3) It is clear that whoever 
+(3) It is clear that whoever
 committed the murder, if murder
-was committed, Betty Harlowe 
+was committed, Betty Harlowe
 had nothing to do with it.  She
 had an ample allowance.  She
 was at M. Pouillac's Ball on
@@ -10951,12 +10905,12 @@ record is good.
 
 <tr>
 <td class="tdleft">
-(iii) Francine Rollard.  She 
+(iii) Francine Rollard.  She
 was certainly frightened this
-afternoon.  The necklace would 
-be a temptation. 
+afternoon.  The necklace would
+be a temptation.
 <br /><br />
-Was it she who bent over Ann 
+Was it she who bent over Ann
 Upcott in the darkness?
 </td>
 <td class="tdright">
@@ -10973,10 +10927,10 @@ given above, as an assistant.
 
 <tr>
 <td class="tdleft">
-(iv) Ann Upcott. 
+(iv) Ann Upcott.
 <br /><br />
 Her introduction into the
-Maison Crenelle took place 
+Maison Crenelle took place
 through Waberski and under
 dubious circumstances.  She is
 poor, a paid companion, and the
@@ -10994,7 +10948,7 @@ history it is impossible to judge.
 <tr>
 <td class="tdleft">
 She was in the house on the
-night of Mrs. Harlowe's death. 
+night of Mrs. Harlowe's death.
 She told Gaston he could turn
 out the lights and go to bed
 early that evening.  She could
@@ -11011,12 +10965,12 @@ beginning to end.
 
 <tr>
 <td class="tdleft">
-The story she told us in the 
+The story she told us in the
 garden may have been the true
 story of what occurred adapted.
-It may have been she who 
+It may have been she who
 whispered "That will do now."
-She may have whispered it to 
+She may have whispered it to
 Waberski.
 <br /><br />
 Her connection with Waberski
@@ -13801,7 +13755,7 @@ it was that Hanaud feared, but sitting in that brightly-lit
 office in the silent building, he was conscious of evil
 presences thronging about the pair of them, presences
 grotesque and malevolent such as some old craftsman of
-Dijon might have carved on the pillars of a cathedral
+Dijon might have carved on the pillars of a cathedral.
 He, too, shivered.
 </p>
 
